chore(deps): 更新 ONNX 版本并优化代码警告处理
- 将 ONNX 版本从 1.20.0 升级到 1.23.1- 移除不必要的 @NonNull 注解以消除编译警告
- 为使用过时 API 的代码添加 @SuppressWarnings({"deprecation"}) 注解
- 替换 setSerializationInclusion 为 setDefaultPropertyInclusion- 优化 URL 创建方式，统一使用 URI.create().toURL()
- 移除未使用的 DeleteRequest 导入
- 优化 lambda 表达式参数命名